Fix overflow (Scroll behavior)

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,6 @@ hr {
 }
 
 body {
-  overflow-x: hidden;
   background-color: #f4f5f7;
 }
 
